system notifications' text should not jump when hovering, display close icon also when focus is inside the box, fixes #6356
Closes #6356

Merge request studip/studip!4817

--- a/resources/assets/stylesheets/scss/system-notifications.scss
+++ b/resources/assets/stylesheets/scss/system-notifications.scss
@@ -105,7 +105,7 @@
 
     .system-notification-close {
         align-self: normal;
-        display: none;
+        visibility: hidden;
         flex: 0;
         height: 20px;
         width: 20px;
@@ -163,9 +163,10 @@
         text-decoration: unset;
     }
 
-    &:hover {
+    &:hover,
+    &:focus-within {
         .system-notification-close {
-            display: unset;
+            visibility: unset;
         }
     }
 
